Fix alignment

--- a/src/views/Zap/zap.scss
+++ b/src/views/Zap/zap.scss
@@ -213,8 +213,8 @@
 }
 
 .zap-input {
-  width: 98%;
-  margin: 5px !important;
+  width: 100%;
+  margin-block: 20px;
   min-height: 70px;
 }
 
